logs/django-emma.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_emma-1.3.egg-info'...
Listing './lib/python3.5/site-packages/emma'...
Listing './lib/python3.5/site-packages/emma/cart'...
Compiling './lib/python3.5/site-packages/emma/cart/views.py'...
***   File "./lib/python3.5/site-packages/emma/cart/views.py", line 19
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emma/columnview'...
Listing './lib/python3.5/site-packages/emma/controller'...
Listing './lib/python3.5/site-packages/emma/controller/management'...
Listing './lib/python3.5/site-packages/emma/controller/management/commands'...
Compiling './lib/python3.5/site-packages/emma/controller/management/commands/2xmp.py'...
***   File "./lib/python3.5/site-packages/emma/controller/management/commands/2xmp.py", line 43
    print 'this is a dry run, only the subprocess command will be printed.'
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/emma/controller/views.py'...
***   File "./lib/python3.5/site-packages/emma/controller/views.py", line 30
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emma/core'...
Compiling './lib/python3.5/site-packages/emma/core/cmd.py'...
***   File "./lib/python3.5/site-packages/emma/core/cmd.py", line 129
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emma/core/compare.py'...
***   File "./lib/python3.5/site-packages/emma/core/compare.py", line 67
    print "No file names provided."
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/emma/core/converter.py'...
***   File "./lib/python3.5/site-packages/emma/core/converter.py", line 91
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emma/core/dump.py'...
***   File "./lib/python3.5/site-packages/emma/core/dump.py", line 76
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emma/core/fix.py'...
***   File "./lib/python3.5/site-packages/emma/core/fix.py", line 60
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emma/core/generatekeywords.py'...
***   File "./lib/python3.5/site-packages/emma/core/generatekeywords.py", line 63
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emma/core/metadata.py'...
***   File "./lib/python3.5/site-packages/emma/core/metadata.py", line 387
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emma/core/utes.py'...
***   File "./lib/python3.5/site-packages/emma/core/utes.py", line 42
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emma/core/watch.py'...
***   File "./lib/python3.5/site-packages/emma/core/watch.py", line 126
    print 'file: %s, file_type: %s, mime_type: %s' % (current_path, file_type, mime_type)
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emma/feedback'...
Listing './lib/python3.5/site-packages/emma/gui'...
Listing './lib/python3.5/site-packages/emma/gui/templatetags'...
Compiling './lib/python3.5/site-packages/emma/gui/views.py'...
***   File "./lib/python3.5/site-packages/emma/gui/views.py", line 96
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emma/interface'...
Listing './lib/python3.5/site-packages/emma/interface/management'...
Listing './lib/python3.5/site-packages/emma/interface/management/commands'...
Compiling './lib/python3.5/site-packages/emma/interface/management/commands/batch_send.py'...
***   File "./lib/python3.5/site-packages/emma/interface/management/commands/batch_send.py", line 47
    print "add option -r (or --for-real) to execute."
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emma/interface/management/commands/reset_contracts.py'...
***   File "./lib/python3.5/site-packages/emma/interface/management/commands/reset_contracts.py", line 12
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emma/interface/management/commands/set_copyright.py'...
***   File "./lib/python3.5/site-packages/emma/interface/management/commands/set_copyright.py", line 49
    print 'acting on category %s' % category
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/emma/interface/migrations'...
Listing './lib/python3.5/site-packages/emma/interface/templatetags'...
Compiling './lib/python3.5/site-packages/emma/interface/views.py'...
***   File "./lib/python3.5/site-packages/emma/interface/views.py", line 87
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emma/metadata'...
Listing './lib/python3.5/site-packages/emma/search'...
Compiling './lib/python3.5/site-packages/emma/search/views.py'...
***   File "./lib/python3.5/site-packages/emma/search/views.py", line 72
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
